[package]
name = "leptos-css"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/leptos-css"
homepage = "https://github.com/lpotthast/leptos-css"
documentation = "https://docs.rs/leptos-css"
description = "Typed CSS values, dimensions, and property names for Leptos"
categories = ["web-programming", "gui", "wasm"]
keywords = ["leptos", "css", "typed", "values", "properties"]
exclude = [
    "/.codegraph/**",
    "/.cargo/**",
    "/.github/**",
    "/.idea/**",
    "/AGENTS.md",
    "/Justfile",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[features]
default = []
# Forwards to `leptos/nightly`. Kept in lockstep with `leptos-styles` so a parent
# crate enabling `nightly` propagates the flag uniformly across both crates.
nightly = ["leptos/nightly"]

[dependencies]
leptos = { version = "0.8.19", default-features = false }

[dev-dependencies]
assertr = { version = "0.6.0" }

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(web_sys_unstable_apis)'] }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
doc_markdown = { level = "allow", priority = 1 }
float_cmp = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
used_underscore_binding = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }
